# ClawCam

./: .gitignore  CONTRIBUTING.md  README.md  add-wifi-manager.patch
firmware/clawcam_node_espidf/main/: CMakeLists.txt  main.c
gateway/: README.md  docker-compose.yml  pyproject.toml
gateway/clawcam_gateway/: __init__.py  config.py  main.py
gateway/clawcam_gateway/alerts/: __init__.py  evaluator.py  rules.py  webhook.py
gateway/clawcam_gateway/api/: __init__.py  app.py  auth_dependency.py  dashboard.py
gateway/clawcam_gateway/audio/: __init__.py  birdnet.py  classifier.py  pipeline.py
gateway/clawcam_gateway/auth/: __init__.py  tokens.py
gateway/clawcam_gateway/diagnostics/: __init__.py
gateway/clawcam_gateway/inference/: __init__.py  detector.py  orchestrator.py  pipeline.py  registry.py
gateway/clawcam_gateway/ingest/: __init__.py  cli.py  export.py  firmware_bundle.py  validation.py
gateway/clawcam_gateway/mcp_server/: README.md  __init__.py  stdio_server.py  tool_dispatch.py
gateway/clawcam_gateway/mqtt_bridge/: __init__.py  bridge.py  topics.py
gateway/clawcam_gateway/profiles/: __init__.py  profiles.py  states.py
gateway/clawcam_gateway/scheduler/: __init__.py  actions.py  engine.py
gateway/clawcam_gateway/simulator/: __init__.py  cli.py  node_simulator.py
gateway/clawcam_gateway/storage/: __init__.py  database.py
gateway/clawcam_gateway/sync/: __init__.py  cloud_store.py  upload_worker.py
gateway/clawcam_gateway/tools/: __init__.py  clawcam_tools.py
gateway/clawcam_gateway/zones/: __init__.py  geometry.py  masks.py
(+100 files in other folders)
