[project]
name = "clawcam-gateway"
version = "0.1.0"
description = "Offline-first ClawCam field gateway for ingest, storage, diagnostics, and agent tools."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "jsonschema>=4.0",
  "httpx>=0.27"
]

[tool.pytest.ini_options]
testpaths = ["../tests/gateway", "../tests/schemas"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
